# anvil

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
anvil/: CMakeLists.txt  cpp.hint  premake5.lua
anvil/src/: Anvil.h  avpch.cpp  avpch.h
anvil/src/anvil/core/: Application.cpp  Application.h  Assert.h  Core.h  Entrypoint.h  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCode.h  Type.h  Utilities.h  Window.h
anvil/src/anvil/event/: ApplicationEvent.h  Event.h  EventBus.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
anvil/src/anvil/renderer/: GraphicsContext.cpp  GraphicsContext.h  RendererAPI.cpp  RendererAPI.h
anvil/src/platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
anvil/src/platform/windows/: WindowsWindow.cpp  WindowsWindow.h
sandbox/: CMakeLists.txt  premake5.lua
sandbox/src/: Main.cpp  Sandbox.cpp  sbpch.h
scripts/windows/: clean.bat  generate_vs2022.bat
